@@ -42,6 +42,7 @@ procps-ng-NEXT
   * top: remains functional if /proc mounted subset=pid
   * top: can display a task's permitted capabilities (^A)
   * uptime: Add container uptime option                    issue #300
+  * vmstat: Add page allocation to --stats
   * vmstat.8: si/so are changed by --unit                  Debian #1061944
   * w: Don't segfault with -s option                       issue #301
   * w: Cache pids list                                     issue #305
